# shuffle3

./: .gitignore  Makefile  README.md  TODO  TODO.org  perf.data  test.sh
include/: array.h  debug.h  error.h  fsvec.h  fsvec.hpp  map.h  panic.h  perc.h  ptr_store.h  rng.h  rng_impl.h  shuffle.hpp  shuffle3.h  tempfile.hpp  uuid.hpp
include/rng/: frng.hpp  impl.hpp  xoroshiro128plus.hpp
lean/: Makefile  TODO.org
lean/include/: colours.h  map.h  panic.h  reinterpret.h  reinterpret.hpp  rng.h  shuffle.hpp  shuffle3.h  work.h
lean/include/rng/: drng.hpp  frng.hpp  impl.hpp  xoroshiro128plus.hpp
lean/src/: debug.c  main.c  map.c  map_callback.cpp  panic.c  reinterpret.cpp  reniterpret.cpp  rng.cpp  work.cpp
lean/src/rng/: drng.cpp  frng.cpp  test.cpp  xoroshiro128plus.cpp
old/include/: ptr_store.h  rng_algos.h
old/src/: array.c  drng.c  frng.c  ptr_store.c  xoroshiro.c
profiling/: massif.out.520307
shuffle3rs/: Cargo.toml
shuffle3rs/src/: arg.rs  defer_drop.rs  ext.rs  main.rs  proc.rs  shuffle.rs  test.rs
shuffle3rs/src/rng/: mod.rs
src/: array.c  debug.c  frng.c  fsvec.c  fsvec.cpp  main.c  map.c  map.cpp  map_callback.cpp  mem.c  panic.c  panic.cpp  perc.cpp  rng.c  rng.cpp  work.cpp  xoroshiro.c
src/rng/: test.cpp
