[package]
name = "shuffle3rs"
version = "0.1.0"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["deferred-drop"]

# Move large objects to a seperate thread to be dropped.
deferred-drop = ["lazy_static"]

[dependencies]
cfg-if = "1.0.0"
lazy_static = {version = "1.4.0", optional = true}
rand = "0.8.3"
