[package]
name = "shuffle3rs"
version = "0.1.0"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
# Needed for tail call opt, to not cause stack overflow.
opt-level = 1

[profile.dev]
# Needed for tail call opt, to not cause stack overflow.
opt-level = 1

[features]
default = ["splash", "deferred-drop", "threads"]

# Print name and info when printing help info
splash = []

# Process multiple inputs concurrently
threads = []

# Move large objects to a seperate thread to be dropped.
deferred-drop = []

[dependencies]
cfg-if = "1.0.0"
lazy_static = "1.4.0"
memmap = "0.7.0"
rand = "0.8.3"
smallvec = {version = "1.6.1", features=["union"]}

[dev-dependencies]
rand_chacha = "0.3.0"
